@@ -5,7 +5,6 @@ all_from('lib/Metabase/Fact.pm');
 requires ('CPAN::DistnameInfo'           => 0       );
 requires ('Carp'                         => 0       );
 requires ('Data::GUID'                   => 0       );
-requires ('Encode'                       => 2       );
 requires ('JSON'                         => 2       );
 requires ('Time::Piece'                  => 1       );
 build_requires('Cwd'                          => 0       );
